fixed on safari

--- a/css/uaqs_featured_content.css
+++ b/css/uaqs_featured_content.css
@@ -79,6 +79,11 @@ background-color:black;
   padding: 0 15px 15px;
   overflow: hidden;
   display: inline-block;
+  -webkit-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  -moz-transition: opacity .3s ease-in-out;
+  -ms-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
 }
 #content_featured .flex-active-slide .mask {
     opacity: 1;
@@ -98,7 +103,7 @@ text-decoration:none;
   background: -ms-linear-gradient(top,  rgba(0,0,0,0.02) 0%,rgba(0,0,0,.2) 18%,rgba(0,0,0,.2) 100%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(0,0,0,0.02) 0%,rgba(0,0,0,.2) 18%,rgba(0,0,0,.2) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#05000000', endColorstr='#000000',GradientType=0 ); /* IE6-8 */
-  transition: background-color 0.3s ease;
+  transition: background-color 1s ease;
 }
 .white a, a .white *, a.white {
 color:white;
@@ -182,14 +187,14 @@ color:white;
   background: hsla(0, 0%, 0%, 0);
   margin: 0 auto;
   max-width: 960px;
-  max-width: 60em;
+  max-width: 58em;
 }
 #content_featured .flexslider {
   border: 0;
   background: hsla(0, 0%, 0%, 0);
   margin: 0 auto;
   max-width: 960px;
-  max-width: 60em;
+  max-width: 58em;
 }
 @media (min-width: 48em) {
     #content_featured .mask {
@@ -249,9 +254,9 @@ color:white;
       overflow: hidden;
       padding: 0;
 -webkit-transform: none!important;
-  -ms-transform: none!important;
- -moz-transform: none!important;
-      transform: none !important;
+    -ms-transform: none!important;
+   -moz-transform: none!important;
+        transform: none !important;
     }
 
     #content_featured_nav ul.slides li.flex--active-slide {
